# co-groth16-gpu

./: .gitignore  Cargo.toml  README.md
src/: bridges.rs  gpu_utils.rs  groth16_gpu.rs  lib.rs  mpc.rs  utils.rs
src/groth16_gpu/: reduction.rs
src/mpc/: plain.rs  rep3.rs
