[package]
name = "co-groth16-gpu"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/co-groth16-gpu"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[dependencies]
ark-bn254 = "^0.5.0"
ark-ec = { version = "^0.5.0", default-features = false }
ark-ff = "^0.5.0"
ark-groth16 = "=0.5.0"
ark-poly = "^0.5.0"
ark-relations = "^0.5.0"
ark-serialize = { version = "^0.5.0", features = ["derive", "std"] }
co-circom-types = { git = "https://github.com/TaceoLabs/co-snarks", branch = "feat/increase-visibility" }
co-groth16 = { git = "https://github.com/TaceoLabs/co-snarks", branch = "feat/increase-visibility" }
eyre = "0.6"
icicle-snark = { git = "https://github.com/ingonyama-zk/icicle-snark" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle-snark.git" }
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle-snark.git" }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle-snark.git" }
mpc-core = { git = "https://github.com/TaceoLabs/co-snarks", branch = "feat/increase-visibility" }
mpc-net =  { git = "https://github.com/TaceoLabs/co-snarks", branch = "feat/increase-visibility" }
num-traits = { version = "0.2.18", default-features = false }
rand = "0.8.5"
rayon = "1.8.1"
tracing = "0.1.40"
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
ark-bls12-377 = "^0.5.0"
ark-bls12-381 = "^0.5.0"
circom-types = { package = "taceo-circom-types", version = "0.2.2", features = ["bls12-381"] }
